--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,1 +1,125 @@
-/*Style your own assignment! This is fun! */
+@import url("https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap");
+
+body {
+  background: #111;
+  color: #efefef;
+  padding: 50px;
+  font-family: "Share Tech Mono";
+  max-height: 100vh;
+  overflow: hidden;
+  padding-top: 25px;
+}
+.pages {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding-top: 25px;
+}
+.title {
+  font-size: 56px;
+}
+.block {
+  background: rgba(0, 0, 0, 0.3);
+  border: 1px solid black;
+  border-bottom: 5px solid black;
+  border-radius: 10px;
+  padding: 50px;
+  padding-top: 20px;
+  width: 100%;
+  max-height: 60vh;
+  overflow-y: scroll;
+}
+
+.block:first-child {
+  max-width: 15%;
+}
+.block:last-chiild {
+  max-width: 85%;
+}
+
+td,
+th {
+  padding-left: 10px;
+  padding-right: 10px;
+  text-align: center;
+}
+table {
+  border-collapse: separate;
+  border-spacing: 1em;
+  width: 100%;
+}
+th {
+  background: rgba(0, 0, 0, 1);
+  padding: 10px;
+  border-radius: 5px;
+}
+td {
+  background: black;
+  padding: 10px;
+  border-radius: 5px;
+}
+td input,
+td select {
+  padding: 0px;
+  font-size: 16px;
+  background: none;
+  color: inherit;
+}
+td:last-child {
+  display: flex;
+  flex-direction: row;
+}
+tr:nth-child(odd) td {
+  background: white;
+  color: black;
+}
+input,
+select {
+  border: none;
+  padding: 20px;
+  font-size: 16px;
+  border-radius: 5px;
+  width: 100%;
+  display: block;
+  -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
+  -moz-box-sizing: border-box; /* Firefox, other Gecko */
+  box-sizing: border-box;
+}
+.spacer {
+  width: 50px;
+}
+
+.spacerMini {
+  width: 20px;
+}
+.saveButton,
+.deleteButton {
+  padding: 5px;
+  font-size: 12px;
+}
+
+button {
+  background: #2980b9;
+  font-size: 28px;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  padding: 20px;
+  width: 100%;
+}
+button:hover {
+  cursor: pointer;
+  opacity: 0.4;
+  transform: scale(1.01);
+}
+
+.saveButton {
+  background: #27ae60;
+}
+.deleteButton {
+  background: #c0392b;
+}
+*,
+*:hover {
+  transition: 0.25s all;
+}
