added more files

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,1 +1,13 @@
 /*Style your own assignment! This is fun! */
+
+
+/* TODO: ID selectors */ 
+
+/* TODO: Element Selectors */
+
+/* TODO: Class Selectors */
+
+/* TODO: CSS Grid or Flexbot Layout */
+
+
+/* TODO: Define all fonts with Google Fonts */
