--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,12 +1,52 @@
-body {
-    color: royalblue;
-    font-family: Quicksand;
+.box {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    align-content: space-between;
+    padding: 5px;
+    flex-wrap: nowrap;
 }
 
-table, td {
-    border: 1px solid #333;
+.child {
+   margin: 5px; 
+}
+
+body {
+    font-family: Quicksand;
+    font-size: 25px;
+}
+
+table {
+    margin-top: 35px;
+    border-collapse: collapse;
+    border-spacing: 0.5rem;
+    width: 100%;
+}
+
+th, td, tfoot {
+    padding: 0.5rem;
+    border-spacing: 0.5rem;
+    vertical-align: middle;
+    text-align: center;
 }
 
 tr.purchased {
-    background-color: grey;
+    background-color: lightgray;
+}
+
+button {
+    font-family: inherit;
+    font-size: 1em;
+}
+
+input {
+    font-family: inherit;
+    font-size: inherit;
+}
+
+.inputBox {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
