--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,1 +1,14 @@
 /*Style your own assignment! This is fun! */
+
+#gameWindow {
+    width:  750px;
+    height: 500px;
+}
+
+.entity {
+    width: 50px;
+    height: 50px;
+    background: red;
+    border-radius: 50%;
+    position : absolute;
+}
