--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,7 +8,7 @@
 .entity {
     width: 50px;
     height: 50px;
-    background: red;
+    background: green;
     border-radius: 50%;
     position : absolute;
 }
