--- a/public/css/style.css
+++ b/public/css/style.css
@@ -45,6 +45,11 @@ form {
 
 button {
     margin-top: 5px;
+    width: fit-content;
+}
+
+#download_button {
+    margin-left: 30%;
 }
 
 table {
@@ -67,4 +72,18 @@ td, th {
 
 th {
     background-color: lightskyblue;
+}
+
+.total_results_panel {
+    margin-left: 20%;
+    margin-top: 3%;
+    margin-bottom: 3%;
+    border: 1px solid black;
+    width: fit-content;
+    justify-content: center;
+    padding-right: 10px; /*Left padding comes from .app_item rule*/
+}
+
+.total_results_item, .total_results_label {
+    display: inline;
 }
