--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,1 +1,144 @@
-/*Style your own assignment! This is fun! */
+@import url('https://fonts.googleapis.com/css?family=Chivo|Overpass|Abel');
+
+body {
+    font-family: Abel;
+    font-size: large;
+    text-align: center;
+    margin: 0 auto;
+    color: #342E09;
+    background-color: #F7E3D4;
+}
+#content {
+    overflow: auto;
+    width: 90%;
+    margin:auto;
+}
+#header {
+    font-family: Chivo;
+    background-color: #FC7307;
+    padding: 75px 0px 25px 0px;
+    font-size: xx-large;
+}
+#education {
+    background-color: #F7E3D4;
+    padding: 0.5em 0;
+    margin: 1%;
+    font-size: x-large;
+    font-family: Abel;
+}
+#footer{
+    background-color: #342E09;
+    padding: 0.5em 0;
+}
+.grid-container-1 {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 1px;
+    align-items: center;
+    justify-items: center;
+}
+.grid-container-1 .grid-1-item:hover {
+    color:#FC7307;
+}
+.grid-container-1-dark .grid-1-item:hover {
+    color:#bb86fc;
+}
+.grid-container-4 {
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    grid-gap: 10px;
+    align-items: center;
+    justify-items: center;  
+}
+.grid-container-4 div:nth-child(1) {
+   justify-self: start;
+   align-self: center;
+   margin-left: 10%;
+}
+.grid-container-4 p{
+    color: #FC7307;
+    font-size: large;
+    display: inline-block;
+    vertical-align: middle ;
+    margin-left:10px;
+}
+.grid-container-4-dark p{
+    color: #ffffff;
+}
+.grid-container-4 div:nth-child(2) {
+    color: #FC7307;
+    justify-self: end;
+    margin-right: 5%;
+}
+.grid-container-4 a {
+    font-family: Abel;
+    font-size: large;
+    color: #FC7307;
+    text-decoration: none;
+}
+
+.grid-container-4-dark div:nth-child(2) {
+    color: #ffffff;
+    justify-self: end;
+    margin-right: 5%;
+}
+.grid-container-4-dark a {
+    font-family: Abel;
+    font-size: large;
+    color: #ffffff;
+    text-decoration: none;
+}
+.switch {
+    position: relative;
+    vertical-align: middle ;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+}
+.switch input { 
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+  .slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: gray;
+    transition: .4s;
+  }
+
+  .slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+  input:checked + .slider {
+    background-color: #bb86fc;
+  }
+  input:focus + .slider {
+    box-shadow: 0 0 1px #bb86fc;
+  }
+  input:checked + .slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+  }
+  
+  /* Rounded sliders */
+  .slider.round {
+    border-radius: 34px;
+  }
+  
+  .slider.round:before {
+    border-radius: 50%;
+  }
