--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,1 +1,120 @@
 /*Style your own assignment! This is fun! */
+
+* {
+    margin: 0;
+    font-family: 'Grandstander', cursive;
+}
+
+*:focus {
+	outline: none;
+}
+
+.container {
+    height: 100vh;
+    background-color: antiquewhite;
+}
+
+#navbar {
+    position: fixed;
+    background-color: aqua;
+    display: grid;
+    grid-template-columns: 4fr 2fr;
+    width: 100vw;
+    padding: 5px 30px;
+}
+
+#logo {
+    font-family: 'Grandstander', cursive;
+    padding: 0 0 0 300px;
+}
+
+#links{
+    display: flex;
+    align-items: center;
+}
+
+#links a {
+    padding: 0 40px 0 40px;
+}
+
+#content {
+    padding: 70px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#content form {
+    display: flex;
+    flex-direction: column;
+}
+
+.form-field {
+    margin: 0.5em;
+}
+
+input {
+    border-color: transparent;
+}
+
+input[type=text] {
+    height: 1.5em;
+    border-radius: 10px;
+}
+
+#book-title, #book-author, 
+#book-isbn, #other-genre {
+    display: block;
+    width: 314px;
+    margin-top: 5px;
+}
+
+.genre-checkbox {
+    display: block;
+    padding: 0.25em 1em;
+}
+
+#other-genre {
+    margin: 0 1em;
+}
+
+#progress {
+    padding: 10px 0;;
+}
+
+#progress input {
+    width: 85px;
+}
+
+#progress input:first-child {
+    margin-left: 10px;
+}
+
+.star-button {
+    background-color: transparent;
+    border: transparent;
+    padding: 0;
+    position: relative;
+    display: inline-block;
+}
+
+.tooltip-text {
+    visibility: hidden;
+    width: 120px;
+    position: absolute;
+    bottom: 100%;
+    left: 50%;
+    margin-left: -60px;
+}
+
+.star-button:hover .tooltip-text {
+    visibility: visible;
+}
+
+#submit-button {
+    margin: 30px 0;
+    font-family: 'Grandstander', cursive;
+    font-weight: 700;
+    font-size: large;
+    height: 2.5em;
+}
