--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,1 +1,83 @@
 /*Style your own assignment! This is fun! */
+body{
+  background-color: #525961;
+  font-family: 'Pacifico', serif;
+}
+
+h1{
+  color: #E3D9D3;
+  text-align: center;
+}
+
+h2{
+  text-align: center;
+  color: #E3D9D3;
+  padding: 10px;
+  border-bottom: 3px solid white;
+}
+
+.input{
+  text-align: center;
+  padding: 5px;
+}
+
+#addtask{
+  padding-top: 7px;
+  padding-bottom: 7px;
+  padding-left: 20px;
+  padding-right: 20px;
+  margin-bottom: 15px;
+  position: relative;
+  left: 45%
+}
+
+form{
+  border: 1px solid;
+  background-color: #f6f6f6;
+  margin-left: 30%;
+  margin-right: 30%;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+ul li {
+  border: 1px solid #ddd;
+  margin: -1px;
+  background-color: #f6f6f6;
+  padding: 12px;
+  text-decoration: none;
+  font-size: 18px;
+  color: black;
+  display: block;
+  position: relative;
+}
+
+ul li:hover {
+  background-color: #eee;
+}
+
+.close {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  right: 0%;
+  padding: 6px 8px;
+  transform: translate(0%, -50%);
+}
+
+.close:hover {background: #bbb;}
+
+.time{
+  position: absolute;
+  top: 50%;
+  right: 10%;
+  padding: 10px 10px;
+}
