--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,1 +1,19 @@
-/*Style your own assignment! This is fun! */
+body {
+  background-color: #32C6DB;
+}
+input[Type = text]{
+  border: none;
+  padding: 16px 32px;
+  margin: 4px 2px;
+  cursor: pointer;
+  }/*Style your own assignment! This is fun! */
+
+#submitBtn{
+ background-color: #359ddb;
+ border: none;
+ color: white;
+ padding: 16px 32px;
+ text-decoration: none;
+ margin: 4px 2px;
+ cursor: pointer;
+}
