--- a/public/css/style.css
+++ b/public/css/style.css
@@ -139,7 +139,7 @@ footer{
 #html-booking {
     display: block;
     width: 80%;
-    background-color: white;
+
     color: black
 }
 
@@ -165,7 +165,7 @@ footer{
     text-align: center;
     flex-direction: column;
     align-items: center;
-    background:white
+
 }
 
 #update-html-booking {
@@ -233,8 +233,8 @@ th, td {
 }
 
 th {
-  background-color: black;
-  color: white;
+
+  color: black;
 }
 </style>
 </head>
