--- a/public/css/style.css
+++ b/public/css/style.css
@@ -58,7 +58,12 @@ h3 {
     margin-bottom: 10px;
     text-align: center;
 }
-
+h4 {
+    align-items: center;
+}
+h6 {
+    align-items: center;
+}
 nav {
     width: 100%;
     font-family: 'Crafty Girls';
@@ -99,7 +104,7 @@ button:hover {
 
 footer{
   font-size: 3vw;
-  
+  text-align: center;
 }
 
 #error {
