done with code part

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,3 +2,11 @@
     z-index: 1;
     box-shadow: 0 0 18px 18px #363636 inset;
 }
+
+#userInput {
+    z-index: 1;
+}
+
+.widget-right {
+    box-shadow: none !important;
+}
