organized layout to grid/flex, results, server, derived, table updates

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,167 +1,101 @@
 @import url('https://fonts.googleapis.com/css?family=Chivo|Overpass|Abel');
 
 body {
+    margin: auto;
     font-family: Abel;
-    font-size: large;
-    text-align: center;
     margin: 0 auto;
     color: #342E09;
     background-color: #F7E3D4;
 }
-#content {
-    overflow: auto;
-    width: 90%;
-    margin:auto;
+/* Define grid areas */
+.sidebar {
+    grid-area: sidebar;
 }
-.wrapper {
-    display: grid;
-    grid-gap: 1em;
-    grid-template-areas:
-     "header" "sidebar" 
-     "sidebar"
-     "intro"
-     "content"
-  }
+
+.content {
+    grid-area: content;
+}
+
 .header {
+    grid-area: header;
+}
+
+.footer {
+    grid-area: footer;
+}
+/* Define grid layouts */
+.wrapper {
+display: grid;
+grid-gap: 1em;
+grid-template-areas:
+    "header"
+    "sidebar"
+    "content"
+    "sidebar2"
+    "footer";
+    width: 100vw;
+    height: 100vh;
+}
+
+@media only screen and (min-width: 600px)   
+{
+    .wrapper {
+        grid-gap: 20px;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 20% auto 10%;
+        grid-template-areas:
+            "header  header"
+            "sidebar content"
+            "footer  footer";
+    }
+}
+
+.box {
+    font-size: large;
+    text-align: center;
+    background-color: #444;
+    color: #fff;
+    border-radius: 5px;
+    padding: 10px;
+}
+/* Grid item styling */
+.header{
     font-family: Chivo;
     background-color: #FC7307;
     padding: 75px 0px 25px 0px;
     font-size: xx-large;
+    border-radius: 0%;
 }
-#intro {
-    background-color: #F7E3D4;
-    padding: 0.5em 0;
-    margin: 1%;
-    font-size: x-large;
-    font-family: Abel;
+.content, .data-form {
+    display: flex;
+    justify-content: center;
 }
-.footer{
+.data-form {
+    margin-top: 5%;
+}
+.footer {
     background-color: #342E09;
-    padding: 0.5em 0;
+    border-radius: 0%;
 }
-.grid-container-1 {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-gap: 1px;
-    justify-items: center;
+/* Specific styling */
+#data-table {
+    width: 100%;
+}
+#form {
+    width: 80%;
+}
+input, #submit-btn{
+    font-family: inherit;
+    font-size: inherit;
 }
 input {
-    font-family: Abel;
-    font-size: large;
-    width: 50%;
+    width: 100%;
     padding: 12px 20px;
     margin: 8px 0;
     box-sizing: border-box;
 }
-#submit-btn{
-    font-family: Abel;
-    font-size: large;
+#submit-btn{ 
     margin: 8px 0;
     padding: 5px 20px;
     width: 50%
 }
-#data-table{
-    border: 1px solid black;
-    border-spacing: 10px;
-    width: 90%;
-}
-/*Footer grid container CSS*/
-.grid-container-4 {
-    display: grid;
-    grid-template-columns: repeat(2,1fr);
-    grid-gap: 10px;
-    align-items: center;
-    justify-items: center;  
-}
-.grid-container-4 div:nth-child(1) {
-   justify-self: start;
-   align-self: center;
-   margin-left: 10%;
-}
-.grid-container-4 p{
-    color: #FC7307;
-    font-size: large;
-    display: inline-block;
-    vertical-align: middle ;
-    margin-left:10px;
-}
-.grid-container-4-dark p{
-    color: #ffffff;
-}
-.grid-container-4 div:nth-child(2) {
-    color: #FC7307;
-    justify-self: end;
-    margin-right: 5%;
-}
-.grid-container-4 a {
-    font-family: Abel;
-    font-size: large;
-    color: #FC7307;
-    text-decoration: none;
-}
-.grid-container-4-dark div:nth-child(2) {
-    color: #ffffff;
-    justify-self: end;
-    margin-right: 5%;
-}
-.grid-container-4-dark a {
-    font-family: Abel;
-    font-size: large;
-    color: #ffffff;
-    text-decoration: none;
-}
-/*Dark mode switch*/
-.switch {
-    position: relative;
-    vertical-align: middle ;
-    display: inline-block;
-    width: 60px;
-    height: 34px;
-}
-.switch input { 
-    opacity: 0;
-    width: 0;
-    height: 0;
-}
-  .slider {
-    position: absolute;
-    cursor: pointer;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: gray;
-    transition: .4s;
-  }
-
-  .slider:before {
-    position: absolute;
-    content: "";
-    height: 26px;
-    width: 26px;
-    left: 4px;
-    bottom: 4px;
-    background-color: white;
-    -webkit-transition: .4s;
-    transition: .4s;
-  }
-  input:checked + .slider {
-    background-color: #bb86fc;
-  }
-  input:focus + .slider {
-    box-shadow: 0 0 1px #bb86fc;
-  }
-  input:checked + .slider:before {
-    -webkit-transform: translateX(26px);
-    -ms-transform: translateX(26px);
-    transform: translateX(26px);
-  }
-  
-  /* Rounded sliders */
-  .slider.round {
-    border-radius: 34px;
-  }
-  
-  .slider.round:before {
-    border-radius: 50%;
-  }
