--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,6 +2,10 @@ body {
     background-color: #F0D0B7;
 }
 
+h1, h2 {
+    text-align: center;
+}
+
 h1 {
     display: flex;
     justify-content: center;
@@ -14,6 +18,7 @@ table, th, td {
     background-color: white;
     border: 2px solid black;
     border-collapse: collapse;
+    text-align: center;
 }
 
 table {
@@ -23,31 +28,25 @@ table {
 }
 
 label {
-    margin: 5px;
-
-    margin-right: 1vw;
+    display: flex;
+    justify-content: flex-start;
     font-size: 20px;
-    margin-bottom: 30px;
+
 }
 
 select {
-    display: inline-flex;
-    float: right;
-    margin-bottom: 30px;
-    margin-right: 20px;
     font-size: 18px;
 }
 
 button {
     width: 30%;
-    height: 30px;
-    margin: 10px;
+    justify-content: center;
     font-size: 20px;
 }
 
 input {
+    margin-left: 20px;
     height: 20px;
-    margin: 5px;
     font-size: 20px;
 }
 
@@ -61,9 +60,37 @@ div.column {
     width: 50%;
     display: flex;
     flex-direction: column;
-    
 }
 
+div.flexContainer {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+div.horizontal-flex {
+    display: flex;
+    flex-direction: row;
+}
+
+table.table-center {
+    margin-left: auto;
+    margin-right: auto;
+}
+
+button.bottom-spacer {
+    margin-bottom: 20px;
+}
+
+.center {
+    width: 50%; 
+    margin: 0 auto;
+}
+
+.margin-spacer {
+    margin: 15px;
+    margin-bottom: 28px;
+}
 
 #top-container {
     width: 100%;
@@ -81,7 +108,6 @@ div.column {
     font-family: 'Fjalla One', sans-serif;
 }
 
-
 #leftColumn {
     width: 35%;
 }
@@ -90,13 +116,8 @@ div.column {
     width: 65%;
 }
 
-#horizontal-flex {
-    display: flex;
-    flex-direction: row;
-}
-
-#device {
-    margin-top: 0px;
+#last-selector {
+    margin-bottom: 20px;
 }
 
 #submit {
@@ -104,15 +125,5 @@ div.column {
     margin-bottom: 30px;
 }
 
-#index-label {
-    font-size: 1px;
-    
-}
 
-
-.center {
-    margin: auto;
-    width: 50%;
-    padding: 0px;
-}
 
