--- a/public/css/style.css
+++ b/public/css/style.css
@@ -73,14 +73,17 @@ div.horizontal-flex {
     flex-direction: row;
 }
 
+div.buttons-flexContainer {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+}
+
 table.table-center {
     margin-left: auto;
     margin-right: auto;
 }
 
-button.bottom-spacer {
-    margin-bottom: 20px;
-}
 
 .center {
     width: 50%; 
@@ -116,13 +119,11 @@ button.bottom-spacer {
     width: 65%;
 }
 
-#last-selector {
-    margin-bottom: 20px;
-}
-
 #submit {
-    margin: 20px;
-    margin-bottom: 30px;
+    display: block;
+    margin: auto;
+    margin-top: 60px;
+    margin-bottom: 40px;
 }
 
 
