--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,11 @@
 body {
   background-color: #32C6DB;
 }
+.title{
+  font-family: cursive;
+  font-size: 30px;
+  text-align:center
+}
 input[Type = text]{
   border: none;
   padding: 16px 32px;
@@ -16,4 +21,17 @@ input[Type = text]{
  text-decoration: none;
  margin: 4px 2px;
  cursor: pointer;
+}
+
+table, th, td {
+  border: 1px solid black;
+  border-collapse: collapse;
+}
+th, td {
+  padding: 15px;
+  text-align: left;
+}
+#t01 {
+  width: 100%;
+  background-color: #f1f1c1;
 }
