--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -17,3 +17,24 @@
 #form-title {
     margin-bottom: 0;
 }
+
+#table-section {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 0;
+    margin-bottom: 0;
+    margin-left: 28%;
+    margin-right: 28%;
+}
+
+#table-header {
+    padding-top: 5%;
+    padding-bottom: 0;
+    margin: 0;
+    text-align: center;
+}
+
+#table-title {
+    margin-bottom: 0;
+}
