--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,1 +1,113 @@
-/*Style your own assignment! This is fun! */
+body {
+  background-color: #AC2B37;
+  color: white;
+  font-family: 'PT Sans';
+}
+
+/* Style the button that is used to open and close the collapsible content */
+.collapsible {
+  background-color: #d3d3d3;
+  color: #AC2B37;
+  cursor: pointer;
+  padding: 18px;
+  width: 50%;
+  border: none;
+  text-align: center;
+  outline: none;
+  font-size: 15px;
+  display:block;
+  margin:auto;
+}
+
+/* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
+.active, .collapsible:hover {
+  background-color: #A9B0B7;
+}
+
+/* Style the collapsible content. Note: hidden by default */
+.content {
+  color: black;
+  display: none;
+  overflow: hidden;
+  background-color: #f1f1f1;
+  width: 40%;
+  padding: 0 5% 0 5%;
+  margin: auto;
+}
+
+.symptom {
+  width: 100%;
+}
+
+table {
+  border-collapse: collapse;
+  table-layout: auto;
+  margin: auto;
+}
+
+td, th {
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 8px;
+}
+
+.rows2, .rows3, .column2 {
+  display: grid;
+  grid-gap: 5%;
+  justify-content: center;
+  grid-template-columns: 1fr 1fr;
+  grid-auto-flow: column;
+  grid-template-rows: 1fr 1fr;
+  text-align: center;
+}
+
+.rows3 {
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  grid-auto-flow: row;
+}
+
+.column2 {
+  grid-template-rows: 1fr;
+}
+
+.symptomColumns {
+  display: grid;
+  justify-content: center;
+  grid-template-columns: 1fr 1fr;
+  grid-auto-flow: row;
+  text-align: left;
+}
+
+button {
+  background-color: #AC2B37;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: block;
+  font-size: 16px;
+  margin: auto;
+}
+
+button:hover {
+  background-color: #93121E;
+}
+
+#resetButton {
+  color: #AC2B37;
+  background-color: #d3d3d3;
+}
+
+#resetButton:hover {
+  background-color: #A9B0B7;
+}
+
+h1, h2 {
+  text-align: center;
+}
+
+#database {
+  text-align: center;
+}
