--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,1 +1,61 @@
 /*Style your own assignment! This is fun! */
+
+body {
+	font-family: 'Roboto', sans-serif;
+	font-size: 3ch;
+}
+
+.container {
+	display: flex;
+}
+
+#left-block {
+	float: left;
+	height: 100vh;
+	width: 20vw;
+	justify-content: center;
+	align-items: center;
+}
+
+#center-block {
+	flex-flow: wrap column;
+	justify-content: center;
+	align-items: center;
+	height: 100vh;
+}
+
+#scores {}
+
+#scrambled  {
+	text-align: center;
+}
+
+#scrambledWord {
+	font-size: 4ch;
+}
+
+
+#answer {
+  display: block;
+  margin: 2em auto;
+  border: none;
+  padding: 0;
+  width: 10.5ch;
+  /*background: repeating-linear-gradient(90deg, dimgrey 0, dimgrey 1ch, transparent 0, transparent 1.5ch) 0 100% / 10ch 2px no-repeat;*/
+  letter-spacing: 0.5ch;
+  font: 5ch monospace;
+}
+
+.incorrect {
+	color: red;
+}
+
+.incorrect: focus {
+	color: red;
+}
+
+#answer:focus {
+  outline: none;
+  color: plum;
+}
+
