--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,1 +1,39 @@
-/*Style your own assignment! This is fun! */
+h1 {
+  text-align: center;
+  color: white;
+}
+table, td, th{
+  border: 1px solid white;
+  color: white;
+}
+table {
+  border-collapse: collapse;
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+}
+th {
+  height: 50px;
+}
+td {
+  text-align: center;
+}
+.inputs{
+  width: 30%;
+  align: center;
+  font-family: 'Grandstander', cursive;
+}
+button, body{
+  font-family: 'Grandstander', cursive;
+}
+.buttons, .forms{
+  display: flex;
+  justify-content: center;
+}
+body {
+  background-color: black;
+}
+.flex-container {
+  display: flex;
+  flex-direction: column;
+}
