--- a/views/index.html
+++ b/views/index.html
@@ -52,7 +52,7 @@
             <thead>
             <tr>
               <th>#</th>
-              <th>Name</th>
+              <th>Title</th>
               <th>★</th>
               <th>Date</th>
               <th>Delete</th>
