--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,1 +1,129 @@
-/*Style your own assignment! This is fun! */
+* {
+  box-sizing: border-box;
+}
+ 
+form {
+  padding: 15px;
+}
+
+ul {
+  margin-top: 50px;
+  padding: 30px;
+}
+
+ul li {
+  cursor: pointer;
+  position: relative;
+  padding: 12px 8px 12px 40px;
+  background: #C2C7BF;
+  font-size: 18px;
+  transition: 0.2s;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+ul li:nth-child(odd) {
+  background: #979B95;
+}
+
+ul li:hover {
+  background: #3A4930;
+  color: #AFE096;
+  text-decoration: line-through;
+}
+
+ul li.checked {
+  background: #3A4930;
+  color: #AFE096;
+  text-decoration: line-through;
+}
+
+ul li.checked::before {
+  content: "";
+  position: absolute;
+  border-color: #fff;
+  border-style: solid;
+  border-width: 0 2px 2px 0;
+  top: 10px;
+  left: 16px;
+  transform: rotate(45deg);
+  height: 15px;
+  width: 7px;
+}
+
+
+.close {
+  position: absolute;
+  right: 0;
+  top: 0;
+  padding: 12px 16px 12px 16px;
+}
+
+.close:hover {
+  background-color: #f44336;
+  color: white;
+}
+
+
+div {
+  cursor: pointer;
+  position: relative;
+  padding: 12px 8px 12px 40px;
+  background: #C2C7BF;
+  font-size: 18px;
+  transition: 0.2s;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+
+
+
+div.checked::before {
+  content: "";
+  position: absolute;
+  border-color: #fff;
+  border-style: solid;
+  border-width: 0 2px 2px 0;
+  top: 10px;
+  left: 16px;
+  transform: rotate(45deg);
+  height: 15px;
+  width: 7px;
+}
+
+/* Style the input */
+input {
+  margin: 0;
+  border: none;
+  border-radius: 0;
+  width: 75%;
+  padding: 10px;
+  float: left;
+  font-size: 16px;
+  background: #C2C7BF;
+}
+
+/* Style the "Add" button */
+
+#btn {
+  padding: 10px;
+  width: 25%;
+  background: #C2C7BF;
+  color: #1E470A;
+  float: left;
+  text-align: center;
+  font-size: 16px;
+  cursor: pointer;
+  transition: 0.3s;
+  border-radius: 0;
+}
+
+#btn:hover {
+  background: #3A4930;
+  color: #AFE096;
+}
