--- a/public/css/style.css
+++ b/public/css/style.css
@@ -50,6 +50,10 @@
     flex-direction: column;
 }
 
+#book-form {
+    height: 90vh;
+}
+
 .form-field {
     margin: 0.5em;
 }
@@ -92,7 +96,7 @@ input {
     margin-left: 10px;
 }
 
-.star-button {
+.star-button, [class*="star-btn"]{
     background-color: transparent;
     border: transparent;
     padding: 0;
@@ -106,8 +110,12 @@ input {
     margin-left: 10px;
 }
 
-.star-button:hover {
+.star-button:hover, .star-btn:hover {
     cursor: pointer;
+}
+
+.fa-star {
+    color: orange;
 }
 
 .tooltip-text {
@@ -123,6 +131,25 @@ input {
 .star-button:hover .tooltip-text {
     visibility: visible;
 }
+
+table {
+    padding: 20px;
+    width: 50vw;
+}
+
+table tr {
+    line-height: 2em;
+}
+
+table td {
+    text-align: center;
+}
+
+.current-page, .overall-page {
+    width: 50px;
+    margin: auto;
+}
+
 
 #submit-button {
     margin: 30px 0;
